--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ah.hathi.simpleweather"
+    package="com.simple.weather.app"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="ah.hathi.simpleweather.WeatherActivity"
+            android:name="com.simple.weather.app.WeatherActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             >
